make linewidth no longer a unit.length subclass but take a such as first argument
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2244 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -158,7 +158,7 @@ TODO before release:
   - tex module:
     - the very old tex module finally got removed completely
   - style module:
-    - correctly call base class constructor in linewidth
+    - linewidth is no longer a unit.length subclass but expects a such as first argument
   - epsfile module:
     - correct EOL handling while reading DSC's (reported by Markus Meyer)
   - pattern module: new
